resolved benedikt issues